# rs_hsrb_perception

./: .gitignore  CMakeLists.txt  README.md  package.xml
cmake/: rs_hsrb_perception_config.cmake
config/: config_hsrb.ini  semantic_map_lab.yaml  suturo_semantic_map.yaml  suturo_semantic_map.yaml.iai  suturo_semantic_map.yaml.living_room_side_shelf  suturo_semantic_map.yaml.old  suturo_semantic_map.yaml.robocup_final  suturo_semantic_map.yaml.sunday2804  suturo_semantic_map.yaml.veryold
descriptors/analysis_engines/: dummy.yaml  estimate_plane.yaml  hsrb.yaml  hsrb_shelf.yaml  hsrb_table.yaml  save_images.yaml  shelf_door.yaml  suturo_pipeline.yaml
descriptors/annotators/: NaiveObjectRecognition.yaml  NaiveShapeAnnotator.yaml  ObjectFilter.yaml  PositionMsg.yaml  RegionAnnotator.yaml  SaveClusterCloudsAndImages.yaml  SuturoClassifier.yaml
descriptors/typesystem/: all_types.xml  property_types.xml
include/: RosPublisher.h
include/rs_hsrb_perception/: MsgPublisher.h  SuturoProcessManager.h  suturo_conversion.h
include/rs_hsrb_perception/types/: all_types.h  property_types.h  type_definitions.h
src/: MsgPublisher.cpp  NaiveObjectRecognition.cpp  NaiveShapeAnnotator.cpp  ObjectFilter.cpp  PositionMsg.cpp  RegionAnnotator.cpp  RosPublisher.cpp  SaveClusterCloudsAndImages.cpp  SuturoClassifier.cpp  SuturoProcessManager.cpp  suturo_conversion.cpp
